--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"mongodb": "^3.6.5",
 		"mongoose": "^5.12.3",
 		"node-fetch": "^2.6.1",
-		"nodemon": "^2.0.7"
+		"nodemon": "^2.0.7",
+		"passport": "^0.4.1",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.1.0"
 	}
 }
