--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bootstrap": "^4.6.0",
+		"cloudinary": "^1.25.1",
 		"connect-flash": "^0.1.1",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.1.6",
@@ -20,6 +21,8 @@
 		"method-override": "^3.0.0",
 		"mongodb": "^3.6.5",
 		"mongoose": "^5.12.3",
+		"multer": "^1.4.2",
+		"multer-storage-cloudinary": "^4.0.0",
 		"node-fetch": "^2.6.1",
 		"nodemon": "^2.0.7",
 		"passport": "^0.4.1",
