--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bootstrap": "^4.6.0",
+		"bulma": "^0.9.2",
 		"cloudinary": "^1.25.1",
 		"connect-flash": "^0.1.1",
 		"dotenv": "^8.2.0",
@@ -18,12 +18,14 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"joi": "^17.4.0",
+		"leaflet": "^1.7.1",
 		"method-override": "^3.0.0",
 		"mongodb": "^3.6.5",
 		"mongoose": "^5.12.3",
 		"multer": "^1.4.2",
 		"multer-storage-cloudinary": "^4.0.0",
 		"node-fetch": "^2.6.1",
+		"node-geocoder": "^3.27.0",
 		"nodemon": "^2.0.7",
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
